--- a/ClientApp/src/styles.css
+++ b/ClientApp/src/styles.css
@@ -8,9 +8,13 @@ html {
 	height: 100%;
 }
 
-.round-button {
-	border: none;
-    border-radius: 20px;
-	height: 40px;
-	width: 40px;
+@keyframes fadeOut {
+	from { opacity: 1; }
+	to { opacity: 0; }
+}
+  
+.fade-out {
+	animation-name: fadeOut;
+	animation-duration: 500ms;
+	animation-fill-mode: forwards;
 }
