--- a/ClientApp/src/app/dropdown-menu/dropdown-menu.component.html
+++ b/ClientApp/src/app/dropdown-menu/dropdown-menu.component.html
@@ -1,8 +1,4 @@
-<div class="menu-item">
-    <img src="../../assets/friends.svg">
-    Friends
-</div>
-<div class="menu-item">
-    <img src="../../assets/settings.svg">
-    Settings
+<div *ngFor="let item of menuItems">
+    <img [src]="item.image">
+    {{item.text}}
 </div>
