feat(styles): divide sidebar style by 2 styles, that makes component more flexible

--- a/ClientApp/src/app/sidebar/sidebar.component.css
+++ b/ClientApp/src/app/sidebar/sidebar.component.css
@@ -1,13 +1,25 @@
 :host {
 	background-color: rgb(80, 80, 80);
+	height: 100%;
+	width: 100%;
+}
+
+:host(.main-container) {
 	display: grid;
 	grid-template-areas: "header header"
         "collections chats";
 	grid-template-columns: 60px auto;
 	grid-template-rows: 56px auto;
-	height: 100%;
-	width: 100%;
 }
+
+:host(.secondary-container) {
+	display: grid;
+	grid-template-areas: "header header"
+        "main main";
+	grid-template-columns: 60px auto;
+	grid-template-rows: 56px auto;
+}
+
 #sidebar-header {
 	align-items: center;
 	display: flex;
@@ -15,12 +27,4 @@
 	gap: 10px;
 	grid-area: header;
 	margin: 0 10px;
-}
-#collections {
-	background-color: red;
-	grid-area: collections;
-}
-#chat-list {
-	background-color: blue;
-	grid-area: chats;
 }
