refactor(styles): move collections and chat list styles to app

--- a/ClientApp/src/app/app.component.css
+++ b/ClientApp/src/app/app.component.css
@@ -12,6 +12,15 @@
     display: flex;
   }
 
+  #collections {
+    background-color: red;
+    grid-area: collections;
+  }
+  #chat-list {
+    background-color: blue;
+    grid-area: chats;
+  }
+
   .sidebar {
     width: 350px;
   }
