--- a/ClientApp/src/app/modules/sidebar/sidebar.component.html
+++ b/ClientApp/src/app/modules/sidebar/sidebar.component.html
@@ -1,7 +1,5 @@
 <div id="sidebar-header">
-    <app-round-button 
-    [src]="'../../assets/menu.svg'"
-    (click)="openMenu($event)"></app-round-button>
+    <app-round-button></app-round-button>
     <ng-container #mainMenu></ng-container>
     <app-search-bar></app-search-bar>
 </div>
