feat(markup): remove binded attribute

--- a/ClientApp/src/app/app.component.html
+++ b/ClientApp/src/app/app.component.html
@@ -1,7 +1,8 @@
 
 <div class="sidebar">
   <app-sidebar 
-    [containerClass]="'main-container'">
+    [containerClass]="'main-container'"
+    [selectedSidebar]="sidebarContainer">
     <div id="collections">
     
     </div>
