--- a/ClientApp/src/app/modules/dropdown-menu/dropdown-menu.component.html
+++ b/ClientApp/src/app/modules/dropdown-menu/dropdown-menu.component.html
@@ -1,4 +1,4 @@
-<div *ngFor="let item of menuItems">
-    <img [src]="item.image" (click)="item.onClick()">
+<div *ngFor="let item of menuItems" (click)="item.onClick($event)">
+    <img [src]="item.image">
     {{item.text}}
 </div>
