feat(components): add ng-switch logic for sidebar

--- a/ClientApp/src/app/app.component.html
+++ b/ClientApp/src/app/app.component.html
@@ -1,19 +1,9 @@
 
-<div class="sidebar">
-  <app-sidebar 
-    [containerClass]="'main-container'"
-    [selectedSidebar]="sidebarContainer">
-    <div id="collections">
-    
-    </div>
-    <div id="chat-list">
-        <!--В след раз надо сделать то же, что и в telegram contacts-->
-    </div>
-  </app-sidebar>
+<div [ngSwitch]="sidebarMode"  class="sidebar">
+  <app-main-sidebar *ngSwitchCase="'main'" (sidebarModeEvent)="handleModeEvent($event)"></app-main-sidebar>
+  <app-settings-sidebar *ngSwitchCase="'settings'" (sidebarModeEvent)="handleModeEvent($event)"></app-settings-sidebar>
+  <app-friends-sidebar *ngSwitchCase="'friends'" (sidebarModeEvent)="handleModeEvent($event)"></app-friends-sidebar>
 </div>
-<ng-container #selectedSidebar></ng-container>
-<!--Понять как получить доступ к этой хуйне для генерации сайдбара
-    И предусмотреть, чтобы сайдбар покрывал уже существующий-->
 <div class="chat">
   <app-chat></app-chat>
 </div>
