feat: use settings form component

--- a/ClientApp/src/app/modules/sidebar/settings-sidebar/settings-sidebar.component.html
+++ b/ClientApp/src/app/modules/sidebar/settings-sidebar/settings-sidebar.component.html
@@ -5,31 +5,9 @@
     <app-round-button right-side [buttonIcon]="'assets/edit.svg'" (click)="isFormOpen = !isFormOpen"></app-round-button>
     <app-round-button right-side [buttonIcon]="'assets/log-out.svg'"></app-round-button>
 </app-sidebar-header>
-<div style="grid-area: main; display: flex; flex-direction: column; gap: 10px;">
-    <form id="profile-form" action="post" *ngIf="isFormOpen; else elseBlock" style="display: flex; flex-direction: column; gap: 10px;">
-        <div class="image-input">
-            <img src="https://th.bing.com/th/id/OIP.xvJQ0Mv4jhIPh2k0pAboAAHaEK?w=303&h=180&c=7&r=0&o=5&dpr=1.3&pid=1.7">
-        </div>
-        <div class="field-input">
-            <input name="first-name" type="text">
-            <label for="first-name">First name(required)</label>
-        </div>
-        <div class="field-input">
-            <input name="last-name" type="text">
-            <label for="lastn-name">Last name(optional)</label>
-        </div>
-        <div class="field-input">
-            <input name="bio" type="text">
-            <label for="bio">Bio</label>
-        </div>
-        <div class="field-input">
-            <input name="username" type="text">
-            <label for="username">Username</label>
-        </div>
-        <button>
-            submit
-        </button>
-    </form>
+
+<div class="main-content">
+    <app-settings-form *ngIf="isFormOpen; else elseBlock"></app-settings-form>
     <ng-template #elseBlock class="field-container">
         <div class="image-field">
             <img src="https://th.bing.com/th/id/OIP.xvJQ0Mv4jhIPh2k0pAboAAHaEK?w=303&h=180&c=7&r=0&o=5&dpr=1.3&pid=1.7">
