--- a/ClientApp/src/app/modules/sidebar/settings-sidebar/settings-sidebar.component.css
+++ b/ClientApp/src/app/modules/sidebar/settings-sidebar/settings-sidebar.component.css
@@ -14,6 +14,19 @@
 	overflow: hidden;
 }
 
+.main-content {
+	grid-area: main; 
+	display: flex; 
+	flex-direction: column;
+	gap: 10px;
+}
+
+#profile-form {
+	display: flex;
+	flex-direction: column;
+	gap: 10px;
+}
+
 #profile-form > button{
 	margin: 0 10px;
 }
