fix(html): replace action with method

--- a/ClientApp/src/app/modules/form/settings-form/settings-form.component.html
+++ b/ClientApp/src/app/modules/form/settings-form/settings-form.component.html
@@ -1,4 +1,4 @@
-<form id="profile-form" [formGroup]="applyForm" (submit)="onFormSubmit()" action="post">
+<form id="profile-form" [formGroup]="applyForm" (submit)="onFormSubmit()" method="post">
     <div class="image-input">
         <img #image (click)="fileInput.click()" [src]="userAvatarUrl">
         <input #fileInput type="file" style="display: none" 
