feat(html): update user data fields

--- a/ClientApp/src/app/modules/form/settings-form/settings-form.component.html
+++ b/ClientApp/src/app/modules/form/settings-form/settings-form.component.html
@@ -6,11 +6,11 @@
     </div>
     <div class="field-input">
         <label for="Firstname">First name(required)</label>
-        <input name="Firstname" type="text" formControlName="Firstname" [(ngModel)]="userData!.firstname">
+        <input name="Firstname" type="text" formControlName="Firstname" [(ngModel)]="userData!.firstName">
     </div>
     <div class="field-input">
         <label for="Lastname">Last name(optional)</label>
-        <input name="Lastname" type="text" formControlName="Lastname" [(ngModel)]="userData!.lastname">
+        <input name="Lastname" type="text" formControlName="Lastname" [(ngModel)]="userData!.lastName">
     </div>
     <div class="field-input">
         <label for="Bio">Bio</label>
@@ -18,7 +18,7 @@
     </div>
     <div class="field-input">
         <label for="Username">Username</label>
-        <input name="Username" type="text" formControlName="Username" [(ngModel)]="userData!.username">
+        <input name="Username" type="text" formControlName="Username" [(ngModel)]="userData!.userName">
     </div>
     <button class="primary" type="submit">submit</button>
 </form>
