feat: replace settings sidebar with account pages. add route for each page

--- a/ClientApp/src/app/modules/home/Pages/account/update-account/update-account.component.css
+++ b/ClientApp/src/app/modules/home/Pages/account/update-account/update-account.component.css
@@ -1,3 +1,11 @@
+:host {
+	grid-area: main; 
+	display: flex; 
+	flex-direction: column;
+	margin: 0 5px;
+	gap: 5px;
+}
+
 #profile-form {
 	display: flex;
 	flex-direction: column;
