feat: rename settings to profile

--- a/ClientApp/src/app/modules/home/Pages/account/account-sidebar/account-sidebar.component.html
+++ b/ClientApp/src/app/modules/home/Pages/account/account-sidebar/account-sidebar.component.html
@@ -1,6 +1,6 @@
 <app-sidebar-header #header [buttonIcon]="headerButtonIcon" [hasSearchbar]="false" [onClick]="toMainSidebar">
     <div left-side style="width: 180px;">
-        <p style="font-size: 24px; font-weight: bold;">Settings</p>
+        <p style="font-size: 24px; font-weight: bold;">Profile</p>
     </div>
     <app-round-button right-side [buttonIcon]="'assets/edit.svg'" (click)="navigateBack()"></app-round-button>
     <app-round-button right-side [buttonIcon]="'assets/log-out.svg'" (click)="logout()"></app-round-button>
