--- a/ClientApp/src/app/modules/home/Pages/main/main.component.html
+++ b/ClientApp/src/app/modules/home/Pages/main/main.component.html
@@ -1,6 +1,6 @@
 <div class="sidebar">
-    <router-outlet></router-outlet>
+    <router-outlet name="sidebar"></router-outlet>
 </div>
-<div class="chat">
-    <app-chat></app-chat>
+<div class="main">
+    <router-outlet></router-outlet>
 </div>
