feat: remove second outlet

--- a/ClientApp/src/app/modules/home/Pages/main/main.component.html
+++ b/ClientApp/src/app/modules/home/Pages/main/main.component.html
@@ -1,6 +1,6 @@
 <div class="sidebar">
-    <router-outlet name="sidebar"></router-outlet>
+    <router-outlet></router-outlet>
 </div>
 <div class="main">
-    <router-outlet></router-outlet>
+    <app-chat></app-chat>
 </div>
