feat(components): add toProfile method

--- a/ClientApp/src/app/modules/home/Pages/recommendations-sidebar/recommendations-sidebar.component.html
+++ b/ClientApp/src/app/modules/home/Pages/recommendations-sidebar/recommendations-sidebar.component.html
@@ -14,6 +14,6 @@
     </div>
     <div>
         <button #next (click)="nextUser()">next</button>
-        <button #profile>profile</button>
+        <button #profile (click)="toProfile()">profile</button>
     </div>
 </div>
