feat(html): add send message button

--- a/ClientApp/src/app/modules/home/Pages/account/user-profile-sidebar/user-profile-sidebar.component.html
+++ b/ClientApp/src/app/modules/home/Pages/account/user-profile-sidebar/user-profile-sidebar.component.html
@@ -5,6 +5,7 @@
            {{userData?.firstName}} {{userData?.lastName}}
         </div>
     </div>
+    <button>Send message</button>
     <div class="info-field">
         <p>Bio: {{userData?.bio}}</p>
     </div>
