--- a/ClientApp/src/app/modules/home/Pages/recommendations-sidebar/recommendations-sidebar.component.html
+++ b/ClientApp/src/app/modules/home/Pages/recommendations-sidebar/recommendations-sidebar.component.html
@@ -10,6 +10,9 @@
         </div>
     </div>
     <div class="info-field">
+        <p>Username: {{userData?.userName}}</p>
+    </div>
+    <div class="info-field">
         <p>Bio: {{userData?.bio}}</p>
     </div>
     <div>
