--- a/ClientApp/src/app/modules/home/Pages/main/main.component.html
+++ b/ClientApp/src/app/modules/home/Pages/main/main.component.html
@@ -2,5 +2,5 @@
     <router-outlet></router-outlet>
 </div>
 <div class="main">
-    <app-chat></app-chat>
+    <router-outlet name="main"></router-outlet>
 </div>
