feat: add add-chat-button

--- a/ClientApp/src/app/modules/home/Pages/main-sidebar/main-sidebar.component.html
+++ b/ClientApp/src/app/modules/home/Pages/main-sidebar/main-sidebar.component.html
@@ -13,3 +13,7 @@
         [message]="'not implemented'"></app-chat-item>
     </div>
 </div>
+
+<button id="add-chat-button" (click)="addChatClick()">
+    <img [src]="addGroupChatIcon" width="30" height="30">
+</button>
