--- a/ClientApp/src/app/modules/home/Pages/main-sidebar/main-sidebar.component.css
+++ b/ClientApp/src/app/modules/home/Pages/main-sidebar/main-sidebar.component.css
@@ -1,5 +1,5 @@
 :host {
-	background-color: rgb(80, 80, 80);
+	background-color: var(--primary-color);
 	height: 100%;
 	width: 100%;
 	display: grid;
@@ -7,6 +7,8 @@
         "collections chats";
 	grid-template-columns: 60px auto;
 	grid-template-rows: 56px auto;
+	position: relative;
+	color: white;
 }
 
 :host(.secondary-container) {
@@ -18,11 +20,27 @@
 }
 
 #collections {
-    background-color: red;
+    background-color: var(--primary-color);
     grid-area: collections;
   }
   
 #chat-list {
-    background-color: blue;
+    background-color: var(--primary-color);
     grid-area: chats;
+	position: relative;
+	overflow-y: auto;
+	overflow-x: hidden;
+	max-height: calc(100vh - 56px);
+}
+
+#add-chat-button {
+	background-color: blueviolet;
+	border-radius: 50%;
+	width: 50px;
+	height: 50px;
+	border: none;
+	position: absolute;
+  	right: 16px;
+    bottom: 16px;
+  	z-index: 1;
 }
