--- a/ClientApp/src/app/modules/home/Components/round-button/round-button.component.css
+++ b/ClientApp/src/app/modules/home/Components/round-button/round-button.component.css
@@ -10,6 +10,6 @@
 	width: 40px;
 }
 .round-button:hover {
-	background-color: lightgray;
+	background-color: var(--primary-color-light);
 	cursor: pointer;
 }
