--- a/ClientApp/src/app/modules/home/Components/dropdown-menu/dropdown-menu.component.css
+++ b/ClientApp/src/app/modules/home/Components/dropdown-menu/dropdown-menu.component.css
@@ -6,14 +6,16 @@
 	padding: 5px;
 	border-radius: 20px;
 	box-shadow: 4px 4px 10px 0.5px rgb(16, 16, 16, 0.612);
-	background-color: rgba(80, 80, 80, .9);
+	background-color: var(--primary-translucent-color);
 	-webkit-backdrop-filter: blur(10px);
 	backdrop-filter: blur(10px);
     display: flex;
     flex-direction: column;
+	z-index: 10;
 }
 
 :host > div {
+	height: 40px;
 	display: flex;
 	gap: 20px;
 	border-radius: 20px;
@@ -22,7 +24,6 @@
 	align-items: center;
 	color: rgb(240, 240, 240);
 	font-size: 20px;
-	
 }
 
 :host > div:hover {
