--- a/ClientApp/src/app/modules/home/Pages/friends-sidebar/friends-sidebar.component.css
+++ b/ClientApp/src/app/modules/home/Pages/friends-sidebar/friends-sidebar.component.css
@@ -1,5 +1,5 @@
 :host {
-	background-color: rgb(80, 80, 80);
+	background-color: var(--primary-color);
 	height: 100%;
 	width: 100%;
 	display: grid;
