--- a/ClientApp/src/app/modules/home/Pages/account/user-profile-sidebar/user-profile-sidebar.component.html
+++ b/ClientApp/src/app/modules/home/Pages/account/user-profile-sidebar/user-profile-sidebar.component.html
@@ -5,7 +5,7 @@
            {{userData?.firstName}} {{userData?.lastName}}
         </div>
     </div>
-    <button (click)="toChat()" >Send message</button>
+    <button class="primary-button" (click)="toChat()" >Send message</button>
     <div class="info-field">
         <p>Bio: {{userData?.bio}}</p>
     </div>
