--- a/ClientApp/src/styles/styles.css
+++ b/ClientApp/src/styles/styles.css
@@ -38,3 +38,48 @@ html {
 }
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+.primary-button {
+	color: white;
+  	margin-top: 10px;
+  	border: none;
+  	background-color: var(--primary-color);
+  	border-radius: 20px;
+  	box-shadow: 4px 4px 10px 0.5px rgb(16, 16, 16, 0.612);
+}
+
+.primary-field-input {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+}
+  
+.primary-field-input > label {
+	font-size: 0.875rem;
+	font-weight: 500;
+	color: white;
+}
+  
+.primary-field-input > input {
+	color: white;
+	padding-left: 5px;
+	height: 40px;
+	width: 300px;
+	border: 1px gray solid;
+	border-radius: 10px;
+	background-color: transparent !important;
+}
+  
+.primary-field-input > input:focus {
+	outline: none;
+}
+
+.primary-field-input > textarea {
+	color: white;
+	padding-left: 5px;
+	height: 100px;
+	width: 300px;
+	border: 1px gray solid;
+	border-radius: 10px;
+	background-color: transparent !important;
+}
