--- a/ClientApp/src/app/Pages/login/login.component.css
+++ b/ClientApp/src/app/Pages/login/login.component.css
@@ -12,15 +12,15 @@
     display: flex;
     justify-content: center;
     align-items: center; 
-    background-color: var(--primary-color-light);
+    background-color: var(--primary-color);
 }
 
 #login-form {
   display: flex;
   flex-direction: column;
-  padding: 10px;
+  padding: 15px;
   border-radius: 20px;
-  background-color: var(--primary-color);
+  background-color: var(--primary-color-dark);
   box-shadow: 4px 4px 10px 0.5px rgb(16, 16, 16, 0.612);
   gap: 10px;
 }
@@ -38,13 +38,39 @@
 }
 
 .field-input > input {
+  color: white;
+  padding-left: 5px;
   height: 40px;
   width: 300px;
-  border: none;
+  border: 1px gray solid;
   border-radius: 10px;
+  background-color: transparent !important;
 }
 
 .field-input > input:focus {
-  border: none;
   outline: none;
+}
+
+#login-form > button {
+  color: white;
+  margin-top: 10px;
+  height: 30px;
+  border: none;
+  border-radius: 20px;
+  box-shadow: 4px 4px 10px 0.5px rgb(16, 16, 16, 0.612);
+  background-color: var(--primary-color);
+}
+
+#login-form > button:hover {
+  background-color: var(--primary-color-hover);
+}
+
+#link {
+  align-self: center;
+  margin-top: 20px;
+}
+
+h2 {
+  align-self: center;
+  color: white;
 }
