--- a/ClientApp/src/app/Pages/login/login.component.html
+++ b/ClientApp/src/app/Pages/login/login.component.html
@@ -1,4 +1,5 @@
 <form id="login-form" [formGroup]="loginForm" (submit)="onFormSubmit()" method="post">
+    <h2>Login</h2>
     <div class="field-input">
         <label for="UserName">Username</label>
         <input name="UserName" type="text" formControlName="UserName">
@@ -10,6 +11,6 @@
     <div *ngIf="isError" class="alert alert-danger">
         Incorrect username or password.
     </div>
-    <button class="primary" type="submit">Login</button> <br/>
-    <a [routerLink]="['/register']" routerLinkActive="active-link" >Don't have account?</a>
+    <button type="submit">Login</button>
+    <a id="link" [routerLink]="['/register']" routerLinkActive="active-link" >Don't have account?</a>
 </form>
