--- a/ClientApp/src/app/modules/home/Pages/account/account-main-sidebar/account-main-sidebar.component.html
+++ b/ClientApp/src/app/modules/home/Pages/account/account-main-sidebar/account-main-sidebar.component.html
@@ -1,5 +1,5 @@
 <app-sidebar-header #header [buttonIcon]="headerButtonIcon" [hasSearchbar]="false" [onClick]="toMainSidebar">
-    <div left-side style="width: 180px;">
+    <div id="header" left-side style="width: 180px;">
         <p style="font-size: 24px; font-weight: bold;">Profile</p>
     </div>
     <app-round-button right-side [buttonIcon]="'assets/edit.svg'" (click)="navigateBack()"></app-round-button>
