--- a/ClientApp/src/app/modules/home/Components/chat/chat.component.css
+++ b/ClientApp/src/app/modules/home/Components/chat/chat.component.css
@@ -34,6 +34,7 @@
 
 .message {
     display: flex;
+    flex-direction: column;
     justify-content: space-between;
     align-items: center;
     padding: 3px 8px;
@@ -41,6 +42,21 @@
     max-width: 70%;
     border-radius: 10px;
     background-color: var(--primary-color);
+}
+
+.sender-username {
+    font-size: 12px;
+    font-weight: bold;
+    margin-bottom: 4px;
+    color: white;
+    align-self: flex-start; 
+    text-align: start;
+}
+
+.message-content {
+    font-size: 14px;
+    color: white; 
+    word-wrap: break-word;
 }
 
 .own {
