--- a/ClientApp/src/app/modules/home/Components/chat/chat.component.html
+++ b/ClientApp/src/app/modules/home/Components/chat/chat.component.html
@@ -1,6 +1,9 @@
 <div class="main-header">
-  <img [src]="chat?.avatar" alt="chat avatar">
-  <h1>{{userData?.firstName}} {{userData?.lastName}}</h1>
+  <img *ngIf="!isComments(chat)" [src]="chat?.avatar" alt="chat avatar">
+  <h1 *ngIf="isComments(chat); else noComments">Comments</h1>
+  <ng-template #noComments>
+    <h1>{{userData?.firstName}} {{userData?.lastName}}</h1>
+  </ng-template>
 </div>
 
 <div class="main-content">
@@ -9,8 +12,11 @@
   </div>
   <div class="message-list">
     <div *ngFor="let m of hub.messages" [ngClass]="{'own': isOwnMessage(m)}" class="message">
-      {{m.content}}
-      <span class="date">{{m.timestamp | date: 'HH:mm'}}</span>
+      <div *ngIf="!isOwnMessage(m)" class="sender-username">{{ m.senderUserName }}</div>
+      <div style="display: flex;">
+        <div class="message-content">{{ m.content }}</div>
+        <span class="date">{{m.timestamp | date: 'HH:mm'}}</span>
+      </div>
     </div>
   </div>
 </div>
