--- a/ClientApp/src/app/modules/home/Pages/account/account-info-sidebar/account-info-sidebar.component.html
+++ b/ClientApp/src/app/modules/home/Pages/account/account-info-sidebar/account-info-sidebar.component.html
@@ -27,4 +27,37 @@
             </button>
         </form>
     </div>
+    <div class="user-content">
+        <div class="content-type">
+            <span>Media</span>
+        </div>
+        <div class="post-list">
+            <img 
+                [src]="post.image"
+                (click)="openModal(post)"
+                (contextmenu)="onRightClick($event, post)" 
+                *ngFor="let post of postList">
+            <form id="post-form">
+                <label for="file-input">
+                    <img src="assets/plus.svg" alt="Add File">
+                </label>
+                <input id="file-input" type="file" hidden (change)="onFileSelected($event)" accept="image/*">
+            </form>
+        </div>
+    </div>
+    <app-image-modal 
+        [post]="selectedPost"
+        [isVisible]="isModalVisible"
+        (close)="closeModal()"
+    ></app-image-modal>
+    <div 
+        class="post-menu" 
+        *ngIf="isDropdownVisible" 
+        [ngStyle]="{ top: dropdownPosition.y + 'px', left: dropdownPosition.x + 'px' }"
+        (click)="deletePost(selectedPost!)">
+        <div>
+            <img src="assets/cross.svg">
+            <span>Delete</span>
+        </div>
+    </div>
 </div>
